--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "heroku-postbuild": "cd client && npm run build"
   },
-
+  "repository": {
+    "type": "git",
+    "url": "git@work.github.com:arosenkranz/googlebooks-app.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,7 +23,6 @@
     "if-env": "^1.0.4"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.2.0"
   }
 }
-
